Fixes button alignment.

--- a/styles.css
+++ b/styles.css
@@ -59,9 +59,13 @@ body, a:link, a:visited, a:active{
 }
 
 /* BUTTONS ======================*/
+ul {
+  list-style-type: none;
+}
 .linkholder{
   /*padding: 5px;*/
-  margin: 15px;
+  margin-left: 30px;
+  margin-top: 15px;
 }
 
 button,
@@ -73,13 +77,14 @@ button,
   border-width : 1px;
   border-radius : 50px;
   padding : 10px 18px;
-  /*margin: 40px;*/
+  margin: 40px;
   box-shadow : 0 1px 4px rgba(0,0,0,.6);
-  font-size : 9.5pt;
+  font-size : 11pt;
   font-weight : bold;
   color : #fff;
   text-shadow : 0 1px 3px rgba(0,0,0,.4);
-  font-family : sans-serif;
+  font-family : 'Luckiest Guy', cursive;
+  letter-spacing: .25em;
   text-decoration : none;
 }
 
